--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "netflix-clone-user-management",
+  "name": "user-management-system",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js"
+    "server": "nodemon server.ts",
+    "build": "tsc",
+    "start": "nodemon dist/index.js"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.10",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -18,6 +23,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.3.2",
     "nodemailer": "^6.9.14",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.5.3",
     "validator": "^13.11.0"
   },
   "devDependencies": {
