--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.ts",
     "build": "tsc",
-    "start": "nodemon dist/index.js"
+    "start": "nodemon dist/index.js",
+    "dev": "ts-node-dev --respawn src/index.ts"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.10",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
