--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.10",
+    "@types/nodemailer": "^6.4.15",
     "@types/otplib": "^10.0.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
