--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.7",
+    "@types/moment-timezone": "^0.5.30",
     "@types/node": "^20.14.10",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
     "@types/otplib": "^10.0.0",
     "bcrypt": "^5.1.1",
@@ -28,7 +30,9 @@
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.3.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "otplib": "^12.0.1",
     "ts-node-dev": "^2.0.0",
