--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.ts",
     "build": "tsc",
-    "start": "nodemon dist/index.js",
+    "start-dev": "nodemon dist/index.js",
+    "start-prod": "node dist/index.js",
     "dev": "ts-node-dev --respawn src/index.ts"
   },
   "dependencies": {
