--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.ts",
     "build": "tsc",
     "start": "nodemon dist/index.js",
+    "start-prod": "node dist/index.js",
     "dev": "ts-node-dev --respawn src/index.ts"
   },
   "dependencies": {
