--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
     "@types/otplib": "^10.0.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -35,6 +37,8 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "otplib": "^12.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3",
     "validator": "^13.11.0"
